--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compile.plugin.version>3.8.1</maven.compile.plugin.version>
         <spring.version>5.3.25</spring.version>
         <lombok.version>1.18.24</lombok.version>
+        <log4j>1.2.17</log4j>
     </properties>
 
     <packaging>war</packaging>
@@ -91,6 +92,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j}</version>
         </dependency>
 
 
