--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <version>1.9.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
     </dependencies>
 
