--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,45 +6,18 @@
 
     <servlet>
     <servlet-name>MainServlet</servlet-name>
-        <servlet-class>com.exersaise.controllers.FrontController</servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/FrontController</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-
-    <servlet>
-        <servlet-name>HelloColombia</servlet-name>
-        <jsp-file>/WEB-INF/jsp/hello.jsp</jsp-file>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>HelloColombia</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-
-    <!--    localhost:8080/application/hello-->
-
-    <servlet>
-        <servlet-name>BeeBee</servlet-name>
-        <jsp-file>/WEB-INF/jsp/bee.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>BeeBee</servlet-name>
-        <url-pattern>/bee</url-pattern>
-    </servlet-mapping>
-
-    <filter>
-        <filter-name>CharsetFilter</filter-name>
-        <filter-class>com.exersaise.filters.CharsetFileter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CharsetFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-
+    <session-config>
+        <session-timeout>10</session-timeout>
+    </session-config>
 
 </web-app>
 
